--- a/WarShooter/WarShooter/WarShooter.vcxproj
+++ b/WarShooter/WarShooter/WarShooter.vcxproj
@@ -64,13 +64,16 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <LibraryPath>$(LIB_PATHx86)SocketIO\x86\Debug;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(LIB_PATH)SFMLx64/include;$(VC_IncludePath);$(WindowsSDK_IncludePath);$(IncludePath)</IncludePath>
     <LibraryPath>$(LIB_PATH)SFMLx64/lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <LibraryPath>W:\!sdk\SocketIO\x86\Release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(LIB_PATH)socket.io-client-cpp/lib/websocketpp;$(LIB_PATH)socket.io-client-cpp/src/internal;$(LIB_PATH)socket.io-client-cpp/lib/rapidjson/include;$(LIB_PATH)boost;$(LIB_PATH)socket.io-client-cpp/src;$(LIB_PATH)SFMLx64/include;$(VC_IncludePath);$(WindowsSDK_IncludePath);$(IncludePath)</IncludePath>
@@ -79,12 +82,12 @@
     <ClCompile>
       <WarningLevel>Level4</WarningLevel>
       <PreprocessorDefinitions>SFML_DYNAMIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;libboost_random-vc141-mt-gd-1_65_1.lib;libboost_regex-vc141-mt-gd-1_65_1.lib;libboost_serialization-vc141-mt-gd-1_65_1.lib;libboost_program_options-vc141-mt-gd-1_65_1.lib;libboost_signals-vc141-mt-gd-1_65_1.lib;libboost_system-vc141-mt-gd-1_65_1.lib;libboost_test_exec_monitor-vc141-mt-gd-1_65_1.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;libboost_random-vc141-mt-sgd-1_65_1.lib;libboost_regex-vc141-mt-sgd-1_65_1.lib;libboost_serialization-vc141-mt-sgd-1_65_1.lib;libboost_program_options-vc141-mt-sgd-1_65_1.lib;libboost_signals-vc141-mt-sgd-1_65_1.lib;libboost_system-vc141-mt-sgd-1_65_1.lib;libboost_test_exec_monitor-vc141-mt-sgd-1_65_1.lib;socketio.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /Y /E /I "$(LIB_PATHx86)SFMLx86\bin\$(Configuration)" "$(TargetDir)"
@@ -112,13 +115,13 @@ xcopy /Y /E /I "$(ProjectDir)images" "$(TargetDir)images"</Command>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>SFML_DYNAMIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>sfml-main.lib;sfml-graphics.lib;sfml-window.lib;sfml-system.lib;libboost_random-vc141-mt-1_65_1.lib;libboost_regex-vc141-mt-1_65_1.lib;libboost_serialization-vc141-mt-1_65_1.lib;libboost_program_options-vc141-mt-1_65_1.lib;libboost_signals-vc141-mt-1_65_1.lib;libboost_system-vc141-mt-1_65_1.lib;libboost_test_exec_monitor-vc141-mt-1_65_1.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>sfml-main.lib;sfml-graphics.lib;sfml-window.lib;sfml-system.lib;libboost_random-vc141-mt-s-1_65_1.lib;libboost_regex-vc141-mt-s-1_65_1.lib;libboost_serialization-vc141-mt-s-1_65_1.lib;libboost_program_options-vc141-mt-s-1_65_1.lib;libboost_signals-vc141-mt-s-1_65_1.lib;libboost_system-vc141-mt-s-1_65_1.lib;libboost_test_exec_monitor-vc141-mt-s-1_65_1.lib;socketio.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /Y /E /I "$(LIB_PATHx86)SFMLx86\bin\$(Configuration)" "$(TargetDir)"
@@ -144,36 +147,28 @@ xcopy /Y /E /I "$(ProjectDir)images" "$(TargetDir)images"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Application.h" />
     <ClInclude Include="Assets.h" />
     <ClInclude Include="Block.h" />
+    <ClInclude Include="BlockView.h" />
     <ClInclude Include="Bullet.h" />
+    <ClInclude Include="BulletView.h" />
     <ClInclude Include="DataOfServer.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameContext.h" />
     <ClInclude Include="sheet.h" />
     <ClInclude Include="Shooter.h" />
-    <ClInclude Include="sio_client.h" />
-    <ClInclude Include="sio_client_impl.h" />
-    <ClInclude Include="sio_message.h" />
-    <ClInclude Include="sio_packet.h" />
-    <ClInclude Include="sio_socket.h" />
+    <ClInclude Include="ShooterView.h" />
     <ClInclude Include="SocketMaster.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Application.cpp" />
     <ClCompile Include="Assets.cpp" />
-    <ClCompile Include="Block.cpp" />
-    <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="BlockView.cpp" />
+    <ClCompile Include="BulletView.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameContext.cpp" />
-    <ClCompile Include="Shooter.cpp" />
-    <ClCompile Include="sio_client.cpp" />
-    <ClCompile Include="sio_client_impl.cpp" />
-    <ClCompile Include="sio_packet.cpp" />
-    <ClCompile Include="sio_socket.cpp" />
+    <ClCompile Include="ShooterView.cpp" />
     <ClCompile Include="DataOfServer.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
