Добавил музыку и сцены

--- a/WarShooter/WarShooter/WarShooter.vcxproj
+++ b/WarShooter/WarShooter/WarShooter.vcxproj
@@ -65,18 +65,20 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LibraryPath>$(LIB_PATHx86)SocketIO\x86\Debug;$(LibraryPath)</LibraryPath>
+    <LibraryPath>W:\!sdk\SocketIO\x86\Debug;W:\!sdk\UniversalLib\Debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>W:\!sdk\UniversalLib\UniversalLib;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(LIB_PATH)SFMLx64/include;$(VC_IncludePath);$(WindowsSDK_IncludePath);$(IncludePath)</IncludePath>
-    <LibraryPath>$(LIB_PATH)SFMLx64/lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64;$(LibraryPath)</LibraryPath>
+    <LibraryPath>W:\!sdk\SocketIO\x64\Debug;$(LIB_PATH)SFMLx64/lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <LibraryPath>W:\!sdk\SocketIO\x86\Release;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(LIB_PATHx86)SocketIO\x86\Release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(LIB_PATH)SocketIO\x64\Release;$(LIB_PATH)boost;$(LIB_PATH)socket.io-client-cpp/src;$(LIB_PATH)SFMLx64/include;$(VC_IncludePath);$(WindowsSDK_IncludePath);$(IncludePath)</IncludePath>
+    <IncludePath>$(LIB_PATH)boost;$(LIB_PATH)socket.io-client-cpp/src;$(LIB_PATH)SFMLx64/include;$(VC_IncludePath);W:\!sdk\socket.io-client-cpp\lib\rapidjson\include;W:\!sdk\socket.io-client-cpp\lib\websocketpp;W:\!sdk\socket.io-client-cpp\src\internal;$(WindowsSDK_IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -87,7 +89,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;libboost_random-vc141-mt-sgd-1_65_1.lib;libboost_regex-vc141-mt-sgd-1_65_1.lib;libboost_serialization-vc141-mt-sgd-1_65_1.lib;libboost_program_options-vc141-mt-sgd-1_65_1.lib;libboost_signals-vc141-mt-sgd-1_65_1.lib;libboost_system-vc141-mt-sgd-1_65_1.lib;libboost_test_exec_monitor-vc141-mt-sgd-1_65_1.lib;socketio.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;UniversalLib.lib;libboost_random-vc141-mt-sgd-1_65_1.lib;libboost_regex-vc141-mt-sgd-1_65_1.lib;libboost_serialization-vc141-mt-sgd-1_65_1.lib;libboost_program_options-vc141-mt-sgd-1_65_1.lib;libboost_signals-vc141-mt-sgd-1_65_1.lib;libboost_system-vc141-mt-sgd-1_65_1.lib;libboost_filesystem-vc141-mt-sgd-1_65_1.lib;libboost_test_exec_monitor-vc141-mt-sgd-1_65_1.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /Y /E /I "$(LIB_PATHx86)SFML\bin\$(Configuration)" "$(TargetDir)"
@@ -101,7 +103,7 @@ xcopy /Y /E /I "$(ProjectDir)sounds" "$(TargetDir)sounds"
     <ClCompile />
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;libboost_random-vc141-mt-gd-1_65_1.lib;libboost_regex-vc141-mt-gd-1_65_1.lib;libboost_serialization-vc141-mt-gd-1_65_1.lib;libboost_program_options-vc141-mt-gd-1_65_1.lib;libboost_signals-vc141-mt-gd-1_65_1.lib;libboost_system-vc141-mt-gd-1_65_1.lib;libboost_test_exec_monitor-vc141-mt-gd-1_65_1.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;UniversalLib.lib;libboost_random-vc141-mt-sgd-1_65_1.lib;libboost_regex-vc141-mt-sgd-1_65_1.lib;libboost_serialization-vc141-mt-sgd-1_65_1.lib;libboost_program_options-vc141-mt-sgd-1_65_1.lib;libboost_signals-vc141-mt-sgd-1_65_1.lib;libboost_system-vc141-mt-sgd-1_65_1.lib;libboost_filesystem-vc141-mt-sgd-1_65_1.lib;SDL2_mixer.lib;SDL2.lib;SDL2main.lib;SDL2test.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent />
     <PostBuildEvent>
@@ -125,11 +127,12 @@ xcopy /Y /E /I "$(ProjectDir)sounds" "$(TargetDir)sounds"
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <Optimization>Full</Optimization>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
+      <SDLCheck>false</SDLCheck>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>sfml-main.lib;sfml-graphics.lib;sfml-window.lib;sfml-system.lib;libboost_random-vc141-mt-s-1_65_1.lib;libboost_regex-vc141-mt-s-1_65_1.lib;libboost_serialization-vc141-mt-s-1_65_1.lib;libboost_program_options-vc141-mt-s-1_65_1.lib;libboost_signals-vc141-mt-s-1_65_1.lib;libboost_system-vc141-mt-s-1_65_1.lib;libboost_test_exec_monitor-vc141-mt-s-1_65_1.lib;socketio.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>sfml-main.lib;sfml-graphics.lib;sfml-window.lib;sfml-system.lib;libboost_random-vc141-mt-s-1_65_1.lib;libboost_regex-vc141-mt-s-1_65_1.lib;libboost_serialization-vc141-mt-s-1_65_1.lib;libboost_program_options-vc141-mt-s-1_65_1.lib;libboost_signals-vc141-mt-s-1_65_1.lib;libboost_system-vc141-mt-s-1_65_1.lib;libboost_test_exec_monitor-vc141-mt-s-1_65_1.lib;libboost_filesystem-vc141-mt-s-1_65_1.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /Y /E /I "$(LIB_PATHx86)SFML\bin\$(Configuration)" "$(TargetDir)"
@@ -142,7 +145,7 @@ xcopy /Y /E /I "$(ProjectDir)sounds" "$(TargetDir)sounds"
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <PreprocessorDefinitions>%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <WarningLevel>Level4</WarningLevel>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <EnableParallelCodeGeneration>true</EnableParallelCodeGeneration>
@@ -150,7 +153,7 @@ xcopy /Y /E /I "$(ProjectDir)sounds" "$(TargetDir)sounds"
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalDependencies>libboost_random-vc141-mt-1_65_1.lib;libboost_regex-vc141-mt-1_65_1.lib;libboost_serialization-vc141-mt-1_65_1.lib;libboost_program_options-vc141-mt-1_65_1.lib;libboost_signals-vc141-mt-1_65_1.lib;libboost_system-vc141-mt-1_65_1.lib;libboost_test_exec_monitor-vc141-mt-1_65_1.lib;sfml-main.lib;sfml-graphics.lib;sfml-window.lib;sfml-system.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>UniversalLib.lib;sfml-main.lib;sfml-graphics.lib;sfml-window.lib;sfml-system.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /Y /E /I "$(LIB_PATH)SFML\bin\$(Configuration)" "$(TargetDir)"
@@ -170,10 +173,14 @@ xcopy /Y /E /I "$(ProjectDir)sounds" "$(TargetDir)sounds"
     <ClInclude Include="DataOfServer.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameContext.h" />
+    <ClInclude Include="GameOverScene.h" />
+    <ClInclude Include="GameScene.h" />
+    <ClInclude Include="PauseScene.h" />
     <ClInclude Include="sheet.h" />
     <ClInclude Include="Shooter.h" />
     <ClInclude Include="ShooterView.h" />
     <ClInclude Include="SocketMaster.h" />
+    <ClInclude Include="StartGameScene.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -183,8 +190,12 @@ xcopy /Y /E /I "$(ProjectDir)sounds" "$(TargetDir)sounds"
     <ClCompile Include="BulletView.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameContext.cpp" />
+    <ClCompile Include="GameOverScene.cpp" />
+    <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="PauseScene.cpp" />
     <ClCompile Include="ShooterView.cpp" />
     <ClCompile Include="DataOfServer.cpp" />
+    <ClCompile Include="StartGameScene.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
